# storm-ircd-svn

trunk/: AUTHORS  INSTALL  Makefile  Makefile.am  README  configure.in  reconf
trunk/contrib/Debian/: storm-ircd
trunk/contrib/gentoo/: storm-ircd  storm-ircd-0.1.ebuild
trunk/doc/: rfc1459.html  rfc2810.html  rfc2812.html  rfc2813.html
trunk/lib/SharpZipLib/: ICSharpCode.SharpZLib.cmbx  SharpZlib.build
trunk/lib/SharpZipLib/samples/cs/minibzip2/: minibzip2.cmbx  minibzip2.mdp  minibzip2.pidb
trunk/lib/SharpZipLib/samples/cs/minigzip/: minigzip.cmbx  minigzip.mdp  minigzip.pidb
trunk/lib/SharpZipLib/src/: ICSharpCode.SharpZLib.mdp  ICSharpCode.SharpZipLib.pidb
trunk/lib/SharpZipLib/tests/: SharpZipLibTests.mdp  SharpZipLibTests.mds  SharpZipLibTests.pidb
trunk/nant/: Makefile.am  storm-ircd.build
trunk/src/: AssemblyInfo.cs  AssemblyInfo.cs.in  Main.cs  Main.cs.in  Makefile.am
trunk/src/base/: BaseConnection.cs  BaseInterpretor.cs  BaseServer.cs  Const.cs  HandleData.cs  IConnection.cs  IInterpretor.cs  IListener.cs  IPrivileges.cs  IServer.cs  IWorker.cs
trunk/src/irc/: IRCChannel.cs  IRCChannelModes.cs  IRCInterpretor.cs  IRCServer.cs  StringParser.cs  UserModes.cs
trunk/src/irc/ClientProtocol/: RFC2812.cs
trunk/src/irc/Commands/: m_chall.cs  m_connect.cs  m_error.cs  m_id.cs  m_join.cs  m_list.cs  m_mode.cs  m_names.cs  m_nick.cs  m_notice.cs  m_oper.cs  m_part.cs  m_pass.cs  m_ping.cs  m_privmsg.cs  m_quit.cs  m_rehash.cs  m_resp.cs  m_restart.cs  m_server.cs  m_stat.cs  m_test.cs  m_user.cs  m_who.cs
trunk/src/irc/ServerProtocol/: RFC2813.cs
trunk/src/native/: Client.cpp  Client.h  Makefile.am  Starter.cpp  Starter.h  storm-ircd.cpp
trunk/src/other/: ApplicationHost.cs  BinaryList.cs  BlackList.cs  CompressionHelper.cs  Messages.cs  Security.cs  Stat.cs  Statistic.cs  storm_signal.cs
trunk/src/scripts/: storm-init
trunk/src/services/: ConsoleInterface.cs  FloodCheck.cs  IRCService.cs  IService.cs  Logger.cs  OperLines.cs  ServerLines.cs  Settings.cs
trunk/src/services/AddIn/AddInLibary/: AbstractAddIn.cs  AddIn.cs  AddInTree.cs  AssemblyInfo.cs  IAddIn.cs
trunk/src/testing/: BindObject.cs  IRCConnection.cs  IRCServer.cs  IRCServerConnection.cs  IRCUserConnection.cs  ReplyCodes.cs  ServiceManager.cs  SimpleClient.cs  SimpleServer.cs  SimpleUser.cs  SocketManager.cs
