# Copyright (C) 2005 Josef Schmeisser <blackdragon@users.berlios.de>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_PREREQ(2.57)
AC_INIT([storm-ircd],
	[0.1],
	[Josef Schmeisser blackdragon@users.berlios.de],
	[storm-ircd])
AM_INIT_AUTOMAKE(storm-ircd, 0.1)
AC_PROG_CXX
AC_PROG_INSTALL

API_VERSION=0.1
AC_SUBST(API_VERSION)

DATE=`date -R`
AC_SUBST(DATE)

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi

PKG_CHECK_MODULES(SKSTREAM, skstream-0.3 >= 0.3.5,,exit)
BUILD_SKSTREAM_CXXFLAGS=`$PKG_CONFIG --cflags skstream-0.3`
BUILD_SKSTREAM_LIBS=`$PKG_CONFIG --libs skstream-0.3`
AC_SUBST(BUILD_SKSTREAM_CXXFLAGS)
AC_SUBST(BUILD_SKSTREAM_LIBS)

MONO_REQUIRED_VERSION=1.1.10
PKG_CHECK_MODULES(MONO_DEPENDENCY, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)

if test "x$has_mono" = "xtrue"; then
	AC_PATH_PROG(RUNTIME, mono, no)
	AC_PATH_PROG(CSC, mcs, no)
else
	AC_PATH_PROG(CSC, csc.exe, no)
	if test "x$CSC" = "xno"; then
		AC_MSG_ERROR([You need to install either mono or .Net])
	else
		RUNTIME=
	fi
fi

CS="C#"
if test "x$CSC" = "xno"; then
	AC_MSG_ERROR([No $CS compiler fount])
fi

AC_PATH_PROG(NANT, nant, no)

if test "x$NANT" = "xno"; then
	AC_MSG_ERROR([You need to install nant])
fi

AC_SUBST(CSC)
AC_SUBST(NANT)
AC_SUBST(RUNTIME)

AC_OUTPUT([Makefile
	src/Makefile
	src/Main.cs
	src/AssemblyInfo.cs
	src/native/Makefile
	nant/Makefile
])
